@@ -4,6 +4,13 @@ BEGIN {
 
 };
 
+if( /LIBSPECTRUM_AUTOGEN_WARNING/ ) {
+  $_ = << "CODE";
+/* NB: This file is autogenerated from libspectrum.h.in. Do not edit
+   unless you know what you're doing */
+CODE
+}
+
 if( /LIBSPECTRUM_SNAP_ACCESSORS/ ) {
 
   open( DATAFILE, '<' . "${srcdir}/snap_accessors.txt" ) or die "Couldn't open `snap_accessors.txt': $!";
