@@ -23,8 +23,7 @@
 
 */
 
-/* NB: This file is autogenerated from libspectrum.h.in. Do not edit
-   unless you know what you're doing */
+LIBSPECTRUM_AUTOGEN_WARNING
 
 #ifndef LIBSPECTRUM_LIBSPECTRUM_H
 #define LIBSPECTRUM_LIBSPECTRUM_H
